content/_generated-doc/2.7/config/quarkus-smallrye-graphql-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-graphql-client_configuration]]link:#quarkus-smallrye-graphql-client_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.url]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.url[quarkus.smallrye-graphql-client."clients".url]`

[.description]
--
The URL location of the target GraphQL service.
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.header-headers]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.header-headers[quarkus.smallrye-graphql-client."clients".header]`

[.description]
--
HTTP headers to add when communicating with the target GraphQL service.
--|`Map<String,String>` 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.subprotocols]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.subprotocols[quarkus.smallrye-graphql-client."clients".subprotocols]`

[.description]
--
WebSocket subprotocols that should be supported by this client for running GraphQL operations over websockets. Allowed values are: - `graphql-ws` for the deprecated Apollo protocol - `graphql-transport-ws` for the newer GraphQL over WebSocket protocol (default value) If multiple protocols are provided, the actual protocol to be used will be subject to negotiation with the server.
--|list of string 
|`graphql-transport-ws`


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.trust-store]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.trust-store[quarkus.smallrye-graphql-client."clients".trust-store]`

[.description]
--
The trust store location. Can point to either a classpath resource or a file.
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.trust-store-password]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.trust-store-password[quarkus.smallrye-graphql-client."clients".trust-store-password]`

[.description]
--
The trust store password.
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.trust-store-type]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.trust-store-type[quarkus.smallrye-graphql-client."clients".trust-store-type]`

[.description]
--
The type of the trust store. Defaults to "JKS".
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.key-store]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.key-store[quarkus.smallrye-graphql-client."clients".key-store]`

[.description]
--
The key store location. Can point to either a classpath resource or a file.
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.key-store-password]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.key-store-password[quarkus.smallrye-graphql-client."clients".key-store-password]`

[.description]
--
The key store password.
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.key-store-type]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.key-store-type[quarkus.smallrye-graphql-client."clients".key-store-type]`

[.description]
--
The type of the key store. Defaults to "JKS".
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.proxy-host]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.proxy-host[quarkus.smallrye-graphql-client."clients".proxy-host]`

[.description]
--
Hostname of the proxy to use.
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.proxy-port]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.proxy-port[quarkus.smallrye-graphql-client."clients".proxy-port]`

[.description]
--
Port number of the proxy to use.
--|int 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.proxy-username]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.proxy-username[quarkus.smallrye-graphql-client."clients".proxy-username]`

[.description]
--
Username for the proxy to use.
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.proxy-password]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.proxy-password[quarkus.smallrye-graphql-client."clients".proxy-password]`

[.description]
--
Password for the proxy to use.
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.max-redirects]]`link:#quarkus-smallrye-graphql-client_quarkus.smallrye-graphql-client.-clients-.max-redirects[quarkus.smallrye-graphql-client."clients".max-redirects]`

[.description]
--
Maximum number of redirects to follow.
--|int 
|

|===