content/_generated-doc/3.8/config/quarkus-smallrye-graphql-client.adoc

:summaryTableId: quarkus-smallrye-graphql-client
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-graphql-client_configuration]]link:#quarkus-smallrye-graphql-client_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-url]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-url[quarkus.smallrye-graphql-client."clients".url]`


[.description]
--
The URL location of the target GraphQL service.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-header-headers]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-header-headers[quarkus.smallrye-graphql-client."clients".header]`


[.description]
--
HTTP headers to add when communicating with the target GraphQL service.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__HEADER+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-subprotocols]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-subprotocols[quarkus.smallrye-graphql-client."clients".subprotocols]`


[.description]
--
WebSocket subprotocols that should be supported by this client for running GraphQL operations over websockets. Allowed values are: - `graphql-ws` for the deprecated Apollo protocol - `graphql-transport-ws` for the newer GraphQL over WebSocket protocol (default value) If multiple protocols are provided, the actual protocol to be used will be subject to negotiation with the server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__SUBPROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__SUBPROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`graphql-transport-ws`


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-execute-single-result-operations-over-websocket]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-execute-single-result-operations-over-websocket[quarkus.smallrye-graphql-client."clients".execute-single-result-operations-over-websocket]`


[.description]
--
If true, then queries and mutations will run over the websocket transport rather than pure HTTP. Off by default, because it has higher overhead.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__EXECUTE_SINGLE_RESULT_OPERATIONS_OVER_WEBSOCKET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__EXECUTE_SINGLE_RESULT_OPERATIONS_OVER_WEBSOCKET+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-websocket-initialization-timeout]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-websocket-initialization-timeout[quarkus.smallrye-graphql-client."clients".websocket-initialization-timeout]`


[.description]
--
Maximum time in milliseconds that will be allowed to wait for the server to acknowledge a websocket connection (send a subprotocol-specific ACK message).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__WEBSOCKET_INITIALIZATION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__WEBSOCKET_INITIALIZATION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-trust-store]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-trust-store[quarkus.smallrye-graphql-client."clients".trust-store]`


[.description]
--
The trust store location. Can point to either a classpath resource or a file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-trust-store-password]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-trust-store-password[quarkus.smallrye-graphql-client."clients".trust-store-password]`


[.description]
--
The trust store password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-trust-store-type]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-trust-store-type[quarkus.smallrye-graphql-client."clients".trust-store-type]`


[.description]
--
The type of the trust store. Defaults to "JKS".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-key-store]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-key-store[quarkus.smallrye-graphql-client."clients".key-store]`


[.description]
--
The key store location. Can point to either a classpath resource or a file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__KEY_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__KEY_STORE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-key-store-password]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-key-store-password[quarkus.smallrye-graphql-client."clients".key-store-password]`


[.description]
--
The key store password.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-key-store-type]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-key-store-type[quarkus.smallrye-graphql-client."clients".key-store-type]`


[.description]
--
The type of the key store. Defaults to "JKS".

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__KEY_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__KEY_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-proxy-host]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-proxy-host[quarkus.smallrye-graphql-client."clients".proxy-host]`


[.description]
--
Hostname of the proxy to use.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__PROXY_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__PROXY_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-proxy-port]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-proxy-port[quarkus.smallrye-graphql-client."clients".proxy-port]`


[.description]
--
Port number of the proxy to use.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__PROXY_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__PROXY_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-proxy-username]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-proxy-username[quarkus.smallrye-graphql-client."clients".proxy-username]`


[.description]
--
Username for the proxy to use.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__PROXY_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__PROXY_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-proxy-password]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-proxy-password[quarkus.smallrye-graphql-client."clients".proxy-password]`


[.description]
--
Password for the proxy to use.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__PROXY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__PROXY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-max-redirects]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-max-redirects[quarkus.smallrye-graphql-client."clients".max-redirects]`


[.description]
--
Maximum number of redirects to follow.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__MAX_REDIRECTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__MAX_REDIRECTS+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-init-payload-init-payload]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-init-payload-init-payload[quarkus.smallrye-graphql-client."clients".init-payload]`


[.description]
--
Additional payload sent on websocket initialization.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__INIT_PAYLOAD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__INIT_PAYLOAD+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-allow-unexpected-response-fields]]`link:#quarkus-smallrye-graphql-client_quarkus-smallrye-graphql-client-clients-allow-unexpected-response-fields[quarkus.smallrye-graphql-client."clients".allow-unexpected-response-fields]`


[.description]
--
Allowing unexpected fields in response. If true, there will be warning log of an unexpected field. Else it throws an error.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__ALLOW_UNEXPECTED_RESPONSE_FIELDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_GRAPHQL_CLIENT__CLIENTS__ALLOW_UNEXPECTED_RESPONSE_FIELDS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|

|===